--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 
+Release 0.4.1 (2013-02-01)
+------------------------
+
+- Fix timer for Python 2.x
+
 Release 0.4 (2013-02-01)
 ------------------------
 
